@@ -22,10 +22,8 @@ import lombok.*;
 @Views({
 	@View(members="year, number, date; customer; details; estimatedProfit"), 
 	@View(name="QuoteWithRemoveElementCollection", members="year, number, date; data { customer; details }"),
-	// tmr ini
 	@View(name="WithSum", extendsView = "DEFAULT"),
 	@View(name="NoTotals", extendsView = "DEFAULT")
-	// tmr fin
 })
 @Tab(defaultOrder="${year} desc") 
 public class Quote extends Identifiable {
@@ -52,11 +50,12 @@ public class Quote extends Identifiable {
 	@RemoveSelectedAction(forViews="QuoteWithRemoveElementCollection", value="Quote.removeDetail") 
 	@javax.validation.constraints.Size(min=1, max=3)  
 	@ElementCollection
-	@ListProperties("product.number, product.description, unitPrice, quantity, amount[quote.amountsSum, quote.taxesRate, quote.taxes, quote.total]")
-	// tmr ini
+	
+	// The first below @ListProperties with no forViews or notForViews to test a case
+	@ListProperties("product.number, product.description, unitPrice, quantity, amount[quote.amountsSum, quote.taxesRate, quote.taxes, quote.total]")  
+
 	@ListProperties(forViews="WithSum", value="product.number, product.description, unitPrice, quantity, amount+[quote.taxesRate, quote.taxes, quote.total]") 
 	@ListProperties(forViews="NoTotals", value="product.number, product.description, unitPrice, quantity, amount") 
-	// tmr fin
 	Collection<QuoteDetail> details;
 
 	@PrePersist
